--- a/index.html
+++ b/index.html
@@ -1202,6 +1202,7 @@ const entrypoint = (sharedSource, sharedMacro) => {
     editor.session.getDocument().setValue(sharedSource);
     macroEditor.session.getDocument().setValue(sharedMacro);
     loadUrl("res/sprite.png");
+    history.replaceState(null, null, "?");
   }
 };
 
